Fixed mobile layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,12 @@
 body {
   background-color: #eee;
   background-image: url('./assets/marble_bg.jpg');
-  width: 100vw;
   background-size: cover;
   box-sizing: border-box;
   overflow-x: hidden;
   font-family: 'UnitedSans';
+  width: 100vw;
+  position: absolute;
 }
 
 ::selection {
